# redditsenty

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  api.py  launch_server.sh  pyproject.toml  reddit_fetcher.py  reddit_posts.json  requirements.txt  setup_model.sh
web/: index.html  test.html
web/js/: app.js
